--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^0.5.2
+  flutter_login: ^2.2.1
+  convert: ^3.0.1
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
