--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   qr_code_scanner: ^0.5.2
+  url_launcher: ^6.0.10
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
