--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_login: ^2.2.1
   convert: ^3.0.1
   http: ^0.13.3
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
