--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   convert: ^3.0.1
   http: ^0.13.3
   flutter_secure_storage: ^4.2.1
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
