--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.3
   flutter_secure_storage: ^4.2.1
   get_storage: ^2.0.3
+  qr_flutter: ^4.0.0
+  share_plus: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - Graphics/Spur_Logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
